--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ footer {
 
 #about_me{
     font-size: 1.5rem;
-    padding: 1% 5%;
+    padding: 2% 5%;
     font-family: monospace;
 }
 
@@ -55,7 +55,6 @@ footer {
 .self {
     width: 400px;
     clip-path: circle();
-    display: inline-block
 }
 
 
@@ -71,10 +70,10 @@ footer {
 }
 
 hr {
-    border-style: dotted none none;
-    width: 10%;
-    color: #497174;
-    border-width: 10px;
+    border-style: dashed none none;
+    width: 20%;
+    color: #00235B;
+    border-width: 2px;
 }
 
 h1 {
